# autostall

./: README.md
artanis52/: Makefile.am  artanis.scm  artanis.scm~  clean.sh~  guix.scm  guix.scm~
artanis6/: commit.sh  commit.sh~  guix.scm~
artanis6/patches/: config.scm  env.scm  oht.scm  session.scm  utils.scm
artanis6/patches/commands/: work.scm
artanis6/patches/tpl/: parser.scm
artanis7/: #artanis-07.scm#  README.txt  README.txt~  art-in-guile-xyz.scm  art-in-guile-xyz.scm~  artanis-07-bak20241002.scm  artanis-07-bak20241002.scm~  artanis-in-xyz.scm~  clean.sh  commit.sh  guix.scm  guix.scm~  hall.scm  make-version.scm  origenv.scm~  out.scm  quick.sh  run.sh
artanis7/archive/: artanis-in-xyz.scm
artanis7/patches/: copy-all.sh  copy-all.sh~  env.scm  lpc.scm  session.scm  utils.scm
artanis7/patches/commands/: work.scm
artanis7/patches/mvc/: controller.scm
artanis7/patches/tpl/: parser.scm
artanis7/patches/webapi/: restful.scm
babweb/: babweb.scm  babweb.sh  format.sh  guix.scm  guix.scm~  run.sh  run.sh~
bookmunger/: guix.scm  guix.scm~  run.sh  run.sh~
bookstore/: run.sh  run.sh~
conman/: run.sh  run.sh~
ebbot/: Propaganda-mod.txt  destination.txt  ebbot-bak.scm  ebbot.scm~  guix.scm  guix.scm~  init-acct.sh~  quick.sh  run.sh  run.sh~
ebbot/archive/: clean.sh
guile-3.0.10/: guix.scm
guile-3.0.10/guile-3.0.10/: .version  Makefile.in  config.h.in  configure
guile-3.0.10/guile-3.0.10/doc/: Makefile.in
guile-3.0.10/guile-3.0.10/doc/r5rs/: Makefile.in  r5rs.info
guile-3.0.10/guile-3.0.10/doc/ref/: Makefile.in  autoconf-macros.texi  guile.info  guile.info-1  guile.info-10  guile.info-11  guile.info-2  guile.info-3  guile.info-4  guile.info-5  guile.info-6  guile.info-7  guile.info-8  guile.info-9  version.texi
guile-3.0.10/guile-3.0.10/examples/: Makefile.in
guile-3.0.10/guile-3.0.10/guile-readline/: Makefile.in
guile-3.0.10/guile-3.0.10/lib/: Makefile.in
guile-3.0.10/guile-3.0.10/libguile/: Makefile.in  vm-operations.h
guile-3.0.10/guile-3.0.10/meta/: Makefile.in
guile-3.0.10/guile-3.0.10/module/: Makefile.in
guile-3.0.10/guile-3.0.10/prebuilt/: Makefile.in
guile-3.0.10/guile-3.0.10/prebuilt/32-bit-big-endian/: Makefile.in
guile-3.0.10/guile-3.0.10/prebuilt/32-bit-big-endian/ice-9/: boot-9.go
guile-3.0.10/guile-3.0.10/prebuilt/32-bit-little-endian/ice-9/: psyntax-pp.go
guile-3.0.10/guile-3.0.10/prebuilt/64-bit-little-endian/: Makefile.in
guile-3.0.10/guile-3.0.10/prebuilt/i686-pc-linux-gnu/: Makefile.in
guile-3.0.10/guile-3.0.10/prebuilt/i686-pc-linux-gnu/ice-9/: boot-9.go
guile-3.0.10/guile-3.0.10/prebuilt/mips-unknown-linux-gnu/ice-9/: eval.go  psyntax-pp.go
guile-3.0.10/guile-3.0.10/stage0/: Makefile.in
guile-3.0.10/guile-3.0.10/stage1/: Makefile.in
guile-3.0.10/guile-3.0.10/stage2/: Makefile.in
guile-3.0.10/guile-3.0.10/test-suite/: Makefile.in
guile-3.0.10/guile-3.0.10/test-suite/standalone/: Makefile.in
guile-ares-rs/: commit.sh  guix.scm  guix.scm~
labsolns/: AUTHORS  HACKING  Makefile.am  NEWS  README.org  clean.sh  configure.ac  copy-scripts.sh  guix.scm  hall.scm  labsolns.scm  logfile
labsolns/doc/: labsolns.texi
labsolns/labsolns/: artass.scm  gplot.scm
labsolns/scripts/: install-pg.sh
limsnaccessories/: artanis52.scm  limsn.scm  limsn.scm~  limsnboken.scm  limsninherit.scm  run.sh  run.sh~
limsnaccessories/scripts/forpack/setupsource/: std-inst-via-ch.sh
limsnaccessories/scripts/forpack/toinstall/: README.txt  install-limsn-pack.sh
limsnaccessories/scripts/wchannell/toinstall/prepak/: std-inst-via-ch.sh
limsnaccessories/scripts/wchannell/toinstall/stdpkg/: limsn-ec2.tar.xz
lnpgaccessories/: prep-for-lnpg.sh  prep-for-lnpg.sh~
mutvis/: guix.scm~  mutvis.scm
myapp/: Makefile.am~  guix.scm  guix.scm~  myapp.scm
myapp3/: guix.scm  guix.scm~  manifest.scm  run.sh  run.sh~
port/: guix.scm
psql-client/: guix (copy).scm  guix.scm
seqeval/: guix.scm  seqeval.scm  seqeval.scm~
shinyln/: guix.scm  guix.scm~  prep-aws-w-channel.sh  refresh.sh
testfiles/: configure.ac  guix-gh40.scm  guix-with-mods.scm  guix-with-mods.scm~  guix.scm  hall40.scm  labsolns.scm  lnpg.scm
